--- a/front-end/src/containers/ContactUs/styles.scss
+++ b/front-end/src/containers/ContactUs/styles.scss
@@ -136,6 +136,7 @@
             height: 48px;
             font-size: $mobile-regular-font-size;
             margin-top: 5px;
+            padding: 20px 15px;
           }
 
           textarea {
