--- a/front-end/src/containers/Authentication/styles.scss
+++ b/front-end/src/containers/Authentication/styles.scss
@@ -28,13 +28,12 @@
     flex-direction: row;
     margin-top: 120px;
 
-    .div-auth-form-half-container {
+    .div-auth-img, .div-auth-form {
       width: 50%;
       padding: 0 20px;
 
       .img-background {
         max-width: 100%;
-
       }
     }
 
@@ -59,6 +58,52 @@
     span {
       color: $green-primary;
       text-decoration: underline;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .div-auth-form-container {
+      flex-direction: column;
+
+      .div-auth-img {
+        display: none;
+      }
+
+      .div-auth-form {
+        width: 100%;
+      }
+    }
+  }
+
+  @media (max-width: 710px) {
+    .div-auth-description {
+      margin: 30px 30px 0 30px;
+
+      .div-auth-description-title {
+        font-size: $regular-font-size;
+      }
+
+      .div-auth-description-text {
+        font-size: $mobile-regular-font-size;
+        margin-top: 20px;
+      }
+    }
+
+    .div-auth-form-container {
+      margin-top: 40px;
+
+      .div-auth-form {
+        padding: 0;
+      }
+    }
+
+    .div-auth-features-container {
+      margin-top: 60px;
+      margin-bottom: 40px;
+    }
+
+    .div-auth-help-contact-container {
+      padding: 50px 30px;
     }
   }
 }
