--- a/front-end/src/containers/Authentication/Signup/styles.scss
+++ b/front-end/src/containers/Authentication/Signup/styles.scss
@@ -11,7 +11,7 @@
     align-items: center;
 
     .div-signup-description-title {
-      font-size: $large-font-size;
+      font-size: 70px;
       font-family: 'Montserrat-SemiBold';
     }
 
