--- a/front-end/src/containers/Authentication/components/FacebookButton/styles.scss
+++ b/front-end/src/containers/Authentication/components/FacebookButton/styles.scss
@@ -4,10 +4,12 @@
 .facebook-button {
   border: 1px solid $green-secondary;
   border-radius: 4px;
+  width: 100%;
   height: 80px;
   line-height: 80px;
   text-align: center;
   color: $green-secondary;
+  cursor: pointer;
 
   position: relative;
 
