[FE] hide login/signup buttons after login.  show settings link instead.

--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -31,6 +31,7 @@
     align-items: center;
     margin-top: 26px;
     margin-right: 100px;
+    height: 67px;
 
     .div-signup {
       width: 179px;
@@ -61,6 +62,7 @@
     .div-buttons {
       margin-right: 30px;
       margin-top: 34px;
+      height: 50px;
 
       .div-signup {
         width: 130px;
@@ -95,6 +97,7 @@
     .div-buttons {
       margin-right: 15px;
       margin-top: 15px;
+      height: 25px;
 
       .div-signup {
         width: 60px;
