--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -2,4 +2,99 @@
 
 .settings-dropdown {
   margin: 0 30px;
+
+  .dropdown__trigger {
+    span {
+      text-decoration: underline;
+    }
+  }
+
+  .dropdown__content {
+    background: white;
+    border-radius: 4px;
+    border: 1px solid $text-light-gray;
+    width: 275px;
+    margin-left: 100%;
+    transform: translateX(calc(-100% + 50px));
+    margin-top: 20px;
+
+    .div-menu {
+      color: $text-light-gray;
+      padding: 0 20px;
+      height: 43px;
+      line-height: 43px;
+      margin-top: 20px;
+      font-size: $small-font-size;
+
+      &:hover {
+        color: white;
+        background: $green-primary;
+        opacity: 0.6;
+        text-shadow: $shadow-primary;
+        -webkit-text-stroke-width: 0.05px;
+        -webkit-text-stroke-color: $text-light-gray;
+      }
+    }
+
+    .div-logout {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 50px;
+      height: 64px;
+      background: $extra-light-green;
+      border-top: 1px solid $text-light-gray;
+      padding: 0 20px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+
+      .div-full-name {
+        font-size: $mobile-regular-font-size;
+        color: $text-light-gray;
+      }
+
+      .btn-logout {
+        width: 86px;
+        height: 40px;
+        font-size: $mobile-regular-font-size;
+        font-family: 'Montserrat-SemiBold';
+      }
+    }
+  }
+
+  @media (max-width: 710px) {
+    margin: 0 15px;
+
+    .dropdown__trigger {
+      span {
+        font-size: $mobile-regular-font-size;
+      }
+    }
+    
+    .dropdown__content {
+      transform: translateX(calc(-100%));
+      margin-top: 5px;
+      width: 240px;
+
+      .div-menu {
+        padding: 0 10px;
+        margin-top: 10px;
+        font-size: $mobile-regular-font-size;
+        height: 30px;
+        line-height: 30px;
+      }
+
+      .div-logout {
+        margin-top: 20px;
+        height: 40px;
+        padding: 0 10px;
+
+        .btn-logout {
+          width: 60px;
+          height: 30px;
+          font-size: $mobile-small-font-size;
+        }
+      }
+    }
+  }
 }
