[FE] revise settings menu

--- a/front-end/src/containers/Root/components/DropdownFooter/components/DropdownList/styles.scss
+++ b/front-end/src/containers/Root/components/DropdownFooter/components/DropdownList/styles.scss
@@ -38,6 +38,7 @@
     margin-top: 10px;
     animation-name: dropdown-animation;
     animation-duration: 0.25s;
+    transform-origin: left top;
 
     div {
       padding-top: 10px;
