--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -1,11 +1,21 @@
 @import "../../../../../../styles/variables/variables";
 
+@keyframes dropdown-animation {
+  from { transform: scaleY(0); }
+  to { transform: scaleY(1); }
+}
+
 .settings-dropdown {
-  margin: 0 30px;
 
   .dropdown__trigger {
-    span {
-      text-decoration: underline;
+    img {
+      height: 50px;
+      margin-top: 10px;
+      margin-right: 30px;
+
+      &:active {
+        opacity: 0.7;
+      }
     }
   }
 
@@ -13,18 +23,27 @@
     background: white;
     border-radius: 4px;
     border: 1px solid $text-light-gray;
-    width: 275px;
-    margin-left: 100%;
-    transform: translateX(calc(-100% + 50px));
-    margin-top: 20px;
+    width: 380px;
+    margin-left: -200px;
+    margin-top: 0px;
+    padding-bottom: 20px;
+    animation-name: dropdown-animation;
+    animation-duration: 0.5s;
+    transform-origin: left top;
 
     .div-menu {
       color: $text-light-gray;
-      padding: 0 20px;
-      height: 43px;
-      line-height: 43px;
+      padding: 0 40px;
+      height: 60px;
       margin-top: 20px;
       font-size: $small-font-size;
+      display: flex;
+      align-items: center;
+
+      img {
+        height: 40px;
+        margin-right: 50px;
+      }
 
       &:hover {
         color: white;
@@ -35,64 +54,37 @@
         -webkit-text-stroke-color: $text-light-gray;
       }
     }
+  }
 
-    .div-logout {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 50px;
-      height: 64px;
-      background: $extra-light-green;
-      border-top: 1px solid $text-light-gray;
-      padding: 0 20px;
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
-
-      .div-full-name {
-        font-size: $mobile-regular-font-size;
-        color: $text-light-gray;
-      }
-
-      .btn-logout {
-        width: 86px;
-        height: 40px;
-        font-size: $mobile-regular-font-size;
-        font-family: 'Montserrat-SemiBold';
-      }
+  @media (max-width: 1200px) {
+    .dropdown__content {
+      width: 340px;
     }
   }
 
   @media (max-width: 710px) {
-    margin: 0 15px;
-
     .dropdown__trigger {
-      span {
-        font-size: $mobile-regular-font-size;
+      img {
+        height: 25px;
+        margin-top: 7px;
+        margin-right: 10px;
       }
     }
     
     .dropdown__content {
-      transform: translateX(calc(-100%));
       margin-top: 5px;
-      width: 240px;
+      width: 260px;
+      padding-bottom: 10px;
 
       .div-menu {
-        padding: 0 10px;
+        padding: 0 20px;
         margin-top: 10px;
         font-size: $mobile-regular-font-size;
-        height: 30px;
-        line-height: 30px;
-      }
-
-      .div-logout {
-        margin-top: 20px;
         height: 40px;
-        padding: 0 10px;
-
-        .btn-logout {
-          width: 60px;
-          height: 30px;
-          font-size: $mobile-small-font-size;
+        
+        img {
+          height: 20px;
+          margin-right: 20px;
         }
       }
     }
