--- a/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
+++ b/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
@@ -11,13 +11,14 @@
 
   .img-featured-menu {
     height: 250px;
-    background-color: lightgray;
     margin-top: 3px;
+    object-fit: contain;
   }
 
   .div-featured-menu-details-order {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     .div-featured-menu-details {
       padding: 16px;
@@ -80,7 +81,6 @@
       height: 200px;
       max-width: 50%;
       min-width: 150px;
-      background-color: lightgray;
       margin-top: 0;
       flex-grow: 1;
     }
