--- a/front-end/src/containers/Menus/components/MenuItem/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuItem/styles.scss
@@ -9,7 +9,7 @@
   .img-menu-item {
     max-height: 331px;
     min-height: 300px;
-    object-fit: contain;
+    height: 0;
   }
 
   .div-menu-item-name-price {
