[FE] styling fix.  code clean up

--- a/front-end/src/containers/Checkout/components/OrderedItem/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderedItem/styles.scss
@@ -9,6 +9,7 @@ $ordered-item-size: 120px;
   .img-item {
     width: $ordered-item-size;
     height: $ordered-item-size;
+    border: 1px solid $border-gray;
   }
 
   .ordered-item-info {
