--- a/front-end/src/containers/MenuModal/component/MenuThumbnailList/styles.scss
+++ b/front-end/src/containers/MenuModal/component/MenuThumbnailList/styles.scss
@@ -13,7 +13,7 @@ $mobile-thumbnail-size: 36px;
   }
 
   .gray-border {
-    border: 1px solid $text-light-gray;
+    border: 1px solid $border-gray;
   }
 
   .img-menu-thumbnail {
