--- a/front-end/src/containers/MenuModal/styles.scss
+++ b/front-end/src/containers/MenuModal/styles.scss
@@ -48,6 +48,7 @@
         height: 511px;
         flex-grow: 1;
         object-fit: contain;
+        border: 1px solid $border-gray;
       }
 
       .span-offer {
