--- a/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
+++ b/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
@@ -12,6 +12,7 @@
   .img-featured-menu {
     height: 250px;
     margin-top: 3px;
+    border-bottom: 1px solid $border-gray;
   }
 
   .div-featured-menu-details-order {
@@ -82,6 +83,8 @@
       min-width: 150px;
       margin-top: 0;
       flex-grow: 1;
+      border-bottom: unset;
+      border-right: 1px solid $border-gray;
     }
   
     .div-featured-menu-details-order {
