--- a/front-end/src/containers/Menus/components/MenuItem/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuItem/styles.scss
@@ -10,6 +10,7 @@
     max-height: 331px;
     min-height: 300px;
     height: 0;
+    border: 1px solid $border-gray;
   }
 
   .div-menu-item-name-price {
