--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -106,6 +106,18 @@
     text-align: center;
     font-size: $large-font-size;
 
+    .how-it-works-order {
+
+    }
+
+    .how-it-works-track {
+      margin-top: -240px;
+    }
+
+    .how-it-works-receive {
+      margin-top: -150px;
+    }
+
     @media (max-width: 710px) {
       margin-top: 40px;
     }
