[FE] some more fixes, wording update on home page

--- a/front-end/src/containers/Root/components/Footer/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/styles.scss
@@ -18,7 +18,7 @@
 
   .div-footer-separator-line {
     height: 1px;
-    background-color: #1A1A1A;
+    background-color: white;
   }
 
   .div-footer-middle-container {
