--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -62,7 +62,7 @@
     }
 
     .div-cart {
-      margin-top: 10px;
+      margin-left: 30px;
     }
   }
 
@@ -128,10 +128,6 @@
         height: 25px;
         line-height: 25px;
         font-size: $mobile-small-font-size;
-      }
-
-      .div-cart {
-        margin-top: 5px;
       }
     }
   }
