--- a/front-end/src/styles/variables/_shadows.scss
+++ b/front-end/src/styles/variables/_shadows.scss
@@ -1,1 +1,3 @@
 $shadow-primary: 0px 3px 6px rgba(0, 0, 0, .16);
+$shadow-secondary: 1px 1px 3px rgba(0, 0, 0, .16);
+$shadow-third: 0px 3px 24px rgba(0, 0, 0, .16);
