--- a/front-end/src/containers/ComboSliceModal/styles.scss
+++ b/front-end/src/containers/ComboSliceModal/styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  box-shadow: 0px 3px 24px rgba(0, 0, 0, 0.16);
+  box-shadow: $shadow-third;
   position: absolute;
   top: 80px;
   left: 50%;
