--- a/front-end/src/containers/MealPlans/styles.scss
+++ b/front-end/src/containers/MealPlans/styles.scss
@@ -25,7 +25,7 @@
     padding-bottom: 90px;
 
     .div-meal-plans-grid {
-      box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+      box-shadow: $shadow-primary;
       background-color: white;
       max-width: calc(100% - 280px);
 
