--- a/front-end/src/containers/MenuModal/styles.scss
+++ b/front-end/src/containers/MenuModal/styles.scss
@@ -2,7 +2,7 @@
 
 .div-menu-modal-center {
   background-color: white;
-  box-shadow: 0px 3px 24px rgba(0, 0, 0, 0.16);
+  box-shadow: $shadow-third;
   position: absolute;
   top: 120px;
   left: 50%;
