--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -1,37 +1,49 @@
 @import "../../../../styles/variables/variables";
 
 .div-menus-header-container {
-  height: 150px;
+  position: fixed;
+  width: 100%;
+  height: 78px;
+  z-index: $zindex-menu-header;
   background-color: $extra-light-green;
+
   display: flex;
   flex-direction: row;
+  align-items: center;
+
+  padding: 0 40px 0 60px;
 
   .div-menus-header-left {
     flex-grow: 3;
-    padding: 37px;
     display: flex;
     flex-direction: row;
+    align-items: center;
 
-    div {
-      border: 1px solid #D0D0D0;
-      border-radius: 6px;
-      background-color: white;
-      flex-grow: 1;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      padding: 20px;
-    }
-
-    .div-search-container {
+    img {
+      height: 37px;
       margin-right: 20px;
-      max-width: 459px;
+
+      &:active {
+        opacity: 0.6;
+      }
+    }
+  }
+
+  .div-menus-header-right {
+    .div-search-container {
+      width: 325px;
+      height: 52px;
+      padding: 16px;
+      display: flex;
+      align-items: center;
+      background: white;
+      border-radius: 6px;
+      border: 1px solid #54595480;
 
       input {
-        width: 0px; 
         flex-grow: 1;
-        font-size: $footer-primary-font-size;
-        color: $text-light-gray;
+        font-size: $small-font-size;
+        color: #545954;
         caret-color: $green-primary;
 
         @media (max-width: 1200px) {
@@ -43,107 +55,39 @@
         height: 28px;
       }
     }
-
-    .div-dropdown-container {
-      max-width: 389px;
-
-      span {
-        color: #D0D0D0;
-        font-size: $footer-primary-font-size;
-        flex-grow: 1;
-
-        @media (max-width: 1200px) {
-          font-size: $regular-font-size;
-        }
-      }
-
-      img {
-        height: 16px;
-      }
-    }
   }
 
-  .div-menus-header-right {
-    flex-grow: 2;
-    display: flex;
-    flex-direction: row;
-    position: relative;
+  // @media (max-width: 710px) {
+  //   .div-menus-header-left {
+  //     flex-direction: column;
+  //     padding: 15px 15px 0 15px;
 
-    .div-menus-type-item {
-      width: 33.33%;
-      text-align: center;
-      line-height: 150px;
-      font-size: $footer-primary-font-size;
-      color: $green-primary;
-      margin: 0 5px;
-      box-sizing: border-box;
+  //     .div-dropdown-container, .div-search-container {
+  //       height: 50px;
+  //       width: 100%;
+  //       margin-bottom: 15px; 
 
-      @media (max-width: 1200px) {
-        font-size: $regular-font-size;
-      }
-    }
+  //       input, span {
+  //         font-size: $mobile-regular-font-size;
+  //       }
+  //       img {
+  //         width: 21px;
+  //       }
+  //     }
+  //   }
 
-    .div-menus-type-item:hover {
-      transition: $transition-primary;
-      border-bottom: 3px solid $green-primary;
-    }
+  //   .div-menus-header-right {
+  //     height: 70px;
+  //     .div-menus-type-item {
+  //       font-size: $mobile-regular-font-size;
+  //       line-height: 70px;
+  //       margin: 0px;
+  //       overflow: hidden;
 
-    .bottom-line {
-      transition: $transition-primary;
-      border-bottom: 3px solid $green-primary;
-    }
-  }
-
-  @media (max-width: 1024px) {
-    flex-direction: column;
-    height: unset;
-
-    .div-menus-header-left {
-      .div-dropdown-container, .div-search-container {
-        max-width: unset;
-        width: 50%;
-      }
-    }
-
-    .div-menus-header-right {
-      height: 80px;
-      .div-menus-type-item {
-        line-height: 80px;
-      }
-    }
-  }
-
-  @media (max-width: 710px) {
-    .div-menus-header-left {
-      flex-direction: column;
-      padding: 15px 15px 0 15px;
-
-      .div-dropdown-container, .div-search-container {
-        height: 50px;
-        width: 100%;
-        margin-bottom: 15px; 
-
-        input, span {
-          font-size: $mobile-regular-font-size;
-        }
-        img {
-          width: 21px;
-        }
-      }
-    }
-
-    .div-menus-header-right {
-      height: 70px;
-      .div-menus-type-item {
-        font-size: $mobile-regular-font-size;
-        line-height: 70px;
-        margin: 0px;
-        overflow: hidden;
-
-        @media (max-width: 414px) {
-          font-size: $mobile-small-font-size;
-        }
-      }
-    }
-  }
+  //       @media (max-width: 414px) {
+  //         font-size: $mobile-small-font-size;
+  //       }
+  //     }
+  //   }
+  // }
 }
