[FE] add more components to the menu header.  styling fixes.

--- a/front-end/src/containers/Menus/components/MenuFilter/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuFilter/styles.scss
@@ -34,7 +34,7 @@
     .div-menu {
       color: $text-light-gray;
       margin-top: 10px;
-      padding-left: 20px;
+      padding: 0 20px;
       height: 52px;
       font-size: $regular-font-size;
       display: flex;
