--- a/front-end/src/styles/variables/_zindexes.scss
+++ b/front-end/src/styles/variables/_zindexes.scss
@@ -2,3 +2,4 @@ $zindex-header: 1000 !default;
 $zindex-modal: 1001;
 $zindex-menu-header: 999;
 $zindex-overlay-spinner: 1002;
+$zindex-sidebar: 1001;
