--- a/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
+++ b/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
@@ -11,11 +11,12 @@
 
   .side-cart-summary-recommended {
     margin-top: 20px;
-    margin-left: 20px;
 
     .side-cart-summary-recommended-title {
       display: flex;
       align-items: center;
+      margin-left: 20px;
+      margin-bottom: 10px;
 
       span {
         font-size: 12px;
