[FE] update menu popup.  fix other styles.

--- a/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderSummary/styles.scss
@@ -123,7 +123,7 @@ $order-summary-header-height: 108px;
 
     .order-summary-items-list {
       margin-top: $margin;
-      overflow: scroll;
+      overflow-y: scroll;
       max-height: 400px;
 
       .ordered-item {
