--- a/front-end/src/containers/ComboSliceModal/styles.scss
+++ b/front-end/src/containers/ComboSliceModal/styles.scss
@@ -14,7 +14,7 @@
   overflow: hidden;
 
   .div-combo-slice-modal-center-content {
-    overflow: scroll;
+    overflow-y: scroll;
     height: calc(100% - 180px);
 
     .div-extra-instructions {
