--- a/front-end/src/components/Button/styles.scss
+++ b/front-end/src/components/Button/styles.scss
@@ -5,17 +5,14 @@
   height: 67px;
   font-size: $regular-font-size;
   background: $green-primary;
+  border: unset;
   border-radius: 8px;
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  outline: 0;
+  outline: none;
   white-space: nowrap;
   word-break: keep-all;
-}
-
-.button:focus {
-  outline: 0;
 }
 
 .button:hover {
